client/src/index.css
body {
  margin: 0;
  font-size: 18px;
  line-height: 28px;
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
    "Helvetica Neue", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.container,
.container-fluid {
  /* margin-top: 2rem; */
}

.form-container h1 {
  text-align: center;
}

.form-login,
.form-signup {
  margin: 0 auto;
  max-width: 700px;
}

.cloudinary-button {
  margin: 0 auto;
  padding: 2px 10px 2px 10px;
  margin-top: 10px;
}

.admin-card {
  background-color: #fff !important;
  height: 420px;
}

.admin-card-inner {
  overflow: auto;
  border: none !important;
  box-shadow: none !important;
  margin: 10px 10px 0px 10px;
  padding-top: 0px;
  width: 96%;
}

.table-styled {
  border: 0px;
}

.input-styled {
  width: 100%;
  font-size: 16px;
  border: 2px solid #bcd8e6;
  background-color: #eee !important;
  padding: 5px 5px 5px 15px;
  font-style: italic;
}

.top-radius {
  border-radius: 15px 15px 0px 0px;
  border: none;
}

.card-header {
  background-color: #333;
  border-radius: 15px 15px 0px 0px !important;
}

.card-header h1 {
  color: #fff;
  font-family: Acme;
  margin-bottom: 10px;
}

.dark .card-header {
  background-color: #ddd;
}

.alert {
  border-radius: 15px;
}

.badge-title {
  font-size: 14px;
}

.profile-upload-cloudinary-btn {
  border-radius: 50%;
}

.profile-upload-cloudinary-btn:hover {
 box-shadow: 0px 0px 5px rgba(0,0,0,0.75);
}

